--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <title>Escape Room 2.0</title>
+<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 
 <body>
     <h3>Escape the Room - the online Game</h3>
