--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     function getCohort(){
 
       var params = 'lim=1';
-      var url = 'http://localhost:3000/flash';
+      var url = 'https://coindm.herokuapp.com/flash';
       var xhr = createCORSRequest('GET', url + "?" + params);
       if (!xhr) {
            throw new Error('CORS not supported');
@@ -921,7 +921,7 @@ function sendData(){
     var jsondata = JSON.parse(text);
     //console.log(jsondata);
     var data = JSON.stringify(jsondata);
-    var url = 'http://localhost:3000/flash';
+    var url = 'https://coindm.herokuapp.com/flash';
     var xhr = createCORSRequest('POST', url);
        if (!xhr) {
          throw new Error('CORS not supported');
@@ -955,7 +955,7 @@ function getHighScore(){
 
  //get High Score
     var params = 'lim=1';
-    var url = 'http://localhost:3000/flash';
+    var url = 'https://coindm.herokuapp.com/flash';
     var xhr = createCORSRequest('GET', url + "?" + params);
     if (!xhr) {
          throw new Error('CORS not supported');
