--- a/app/index.html
+++ b/app/index.html
@@ -34,5 +34,5 @@ div {text-align: center;}
 <script src="../bin/smoothie.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-<script src ="cohortE.js"></script>
+<script src ="cohortF.js"></script>
 </body>
