--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,10 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 
-<script src="../starwars/pixi/pixi.min.js"></script>
+<script src="../pixi/pixi.min.js"></script>
 
 <!-- Load Smoothie and your main JS file: -->
-<script src="../starwars/bin/smoothie.js"></script>
+<script src="../bin/smoothie.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <script src ="cohortAB.js"></script>
